# leveling

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 67f8517e596f_initial_schema.py  a1b2c3d4e5f6_add_stage_check_sent_at.py  b2c3d4e5f6a7_add_paused_to_users.py  c3d4e5f6a7b8_add_savings_amount_to_users.py  d4e5f6a7b8c9_add_emergency_fund_stage.py  e5f6a7b8c9d0_digest_weekday_events_profile.py
app/adapters/data/: brapi_adapter.py
app/adapters/delivery/: telegram_adapter.py
app/adapters/narrators/: journey_narrator.py  silent_narrator.py
app/bot/: commands.py  main.py  onboarding.py
app/core/: config.py  database.py
app/data/: fiis.json
app/domain/: fii_catalog.py  models_asset.py  models_asset_orm.py  models_fii.py  models_journey.py  models_user.py  ports.py
app/pipeline/: asset_pipeline.py
app/repositories/: asset_repository.py  fii_repository.py  user_repository.py
app/scheduler/: fii_runner.py  journey_runner.py  weekly_runner.py
app/services/: ai_context.py  profile_service.py
tests/: conftest.py
tests/unit/: test_ai_context.py  test_asset_pipeline.py  test_asset_repository.py  test_asset_rules.py  test_commands.py  test_config.py  test_fii_catalog.py  test_fii_repository.py  test_journey_narrator.py  test_migration_digest_events_profile.py  test_migration_stage_renumbering.py  test_onboarding.py  test_profile_service.py  test_smoke_message.py  test_telegram_adapter.py  test_user_repository.py  test_weekly_runner.py
(+2 files in other folders)
