[project]
name = "leveling"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.111.0",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-telegram-bot>=21.11.1",
    "sqlalchemy>=2.0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
